# Factual-Preference-Alignment

./: .env  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  accuracy.py  construct_dpo_dataset.py  dpo_dataset.py  dpo_training.py  index.html  inference.py  inference_all.py  inference_best_of_n.py  post_processing.py  preprocess_dataset.py  pyproject.toml  run_qwen.sh  translation.py
.github/workflows/: code_checks.yml  docs.yml  integration_tests.yml  publish.yml  unit_tests.yml
api/: index.html
docs/: index.html
outputs/: input_1.jsonl
search/: search_index.json
src/aixpert/: __init__.py
src/aixpert/data_construction/: Readme.md  config.yaml  data_final_eval.py  data_final_train.py  data_flipped_eval.py  data_flipped_train.py  data_merge_eval.py  data_merge_train.py  data_synthetic_eval.py  data_synthetic_train.py  data_transform_eval.py  data_transform_train.py  dataconversion.py  dataconversion_eval.py  dataextraction.py  dataextraction_eval.py  dataextraction_eval2.py  dataset_eval.py  dataset_train.py  utils.py
src/aixpert/data_construction/config/: config.yaml
src/aixpert/data_construction/stage_1_extraction/: dataextraction_eval.py  dataextraction_train.py  dataextraction_val.py
src/aixpert/data_construction/stage_2_conversion/: dataconversion_train.py  dataconversion_val.py
src/aixpert/data_construction/stage_3_factuality/: dataset_train.py  dataset_val.py
src/aixpert/data_construction/stage_4_transformation/: data_transform_train.py  data_transform_val.py
src/aixpert/data_construction/stage_5_syntheticdata/: data_synthetic_train.py  data_synthetic_val.py
src/aixpert/data_construction/stage_6_merging/: data_merge_train.py  data_merge_val.py
src/aixpert/data_construction/stage_7_final/: data_final_train.py  data_final_val.py
src/aixpert/data_construction/stage_8_flipping/: data_flipped_train.py  data_flipped_val.py
src/aixpert/data_construction/stage_9_last/: data_train.py  data_val.py
src/aixpert/data_construction/utils/: data_utils.py  dpo_transform_utils.py  factual_utils.py  prompt_templates.py  synthetic_utils.py
src/aixpert/evaluation/: README_.md
src/aixpert/evaluation/config/: config.yaml
src/aixpert/evaluation/evaluations/: run_all_evaluations.py
src/aixpert/evaluation/utils/: config_loader.py  eval_core_utils.py  eval_template.py
src/aixpert/training/: README.md
src/aixpert/training/config/: config.yaml
src/aixpert/training/scripts/: launch_all_models.py  launch_all_models_delta.py
src/aixpert/training/training/: modifieddpo_trainer.py  run_dpo_training.py  run_factual_training.py  run_modified_training.py
src/aixpert/training/training/trl/: __init__.py  cli.py  data_utils.py  import_utils.py  mergekit_utils.py
src/aixpert/training/training/trl/experimental/bco/: bco_config.py  bco_trainer.py
src/aixpert/training/training/trl/experimental/bema_for_ref_model/: callback.py
src/aixpert/training/training/trl/experimental/gfpo/: gfpo_config.py  gfpo_trainer.py
src/aixpert/training/training/trl/experimental/gold/: gold.py  gold_config.py  gold_trainer.py
src/aixpert/training/training/trl/experimental/grpo_with_replay_buffer/: grpo_with_replay_buffer_trainer.py
src/aixpert/training/training/trl/experimental/gspo_token/: grpo_trainer.py
src/aixpert/training/training/trl/experimental/judges/: judges.py
src/aixpert/training/training/trl/experimental/papo/: papo_config.py  papo_trainer.py
src/aixpert/training/training/trl/experimental/xpo/: xpo_config.py  xpo_trainer.py
src/aixpert/training/training/trl/extras/: dataset_formatting.py  profiling.py  vllm_client.py
src/aixpert/training/training/trl/models/: __init__.py  activation_offloading.py  modeling_base.py  modeling_value_head.py  utils.py
src/aixpert/training/training/trl/rewards/: __init__.py  accuracy_rewards.py  format_rewards.py  other_rewards.py
src/aixpert/training/training/trl/scripts/: __init__.py  dpo.py  env.py  grpo.py  kto.py  reward.py  rloo.py  sft.py  utils.py  vllm_serve.py
src/aixpert/training/training/trl/templates/: lm_model_card.md  rm_model_card.md
src/aixpert/training/training/trl/trainer/: __init__.py  base_trainer.py  callbacks.py  cpo_config.py  cpo_trainer.py  dpo_config.py  dpo_trainer.py  gkd_config.py  gkd_trainer.py  grpo_config.py  grpo_trainer.py  kto_config.py  kto_trainer.py  model_config.py  nash_md_config.py  nash_md_trainer.py  online_dpo_config.py  online_dpo_trainer.py  orpo_config.py  orpo_trainer.py  ppo_config.py  ppo_trainer.py  prm_config.py  prm_trainer.py  reward_config.py  reward_trainer.py  rloo_config.py  rloo_trainer.py  sft_config.py  sft_trainer.py  utils.py
src/aixpert/training/utils/: factual_trainer_utils.py  modified_trainer_utils.py  trainer_utils.py
user_guide/: index.html
