[project]
name = "Prefalingn"
version = "0.1.0"
description = "Rpelication Learning LLM-as-a-Judge for Preference Alignment"
readme = "README.md"
authors = [{name = "Sindhuja Chaduvula", email = "sindhuja.chaduvula@vectorinstitute.ai"}]
license = "MIT"
requires-python = ">=3.10,<3.12"

dependencies = [
    "build>=1.3.0",
    "cmake==4.1.0",
    "ninja>=1.13.0",
    "python-dotenv==1.1",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
    "torch==2.4.1+cu124",
    "torchvision==0.19.1+cu124",
    "torchaudio==2.4.1+cu124",
    "triton==3.0.0",
    "flash-attn==2.6.3",
    "transformers==4.57.0",
    "peft==0.17.1",
    "accelerate==1.10.1",
    "bitsandbytes==0.48.1",
    "pandas==2.3.3",
    "numpy==1.26.4",
    "setuptools>=80.9.0",
    "pydantic-settings==2.11.0",
    "openai==2.3.0",
    "sentence-transformers==5.1.1",
    "jsonlines>=4.0.0",
    "pyarrow==15.0.2",
    "datasets==3.0.1",
    "trl==0.23.1",
]

[tool.uv]
index-url = "https://pypi.org/simple"
extra-index-url = ["https://download.pytorch.org/whl/cu124"]

index-strategy = "unsafe-best-match"
