[project]
name = "AIXpert_preference_alignment"
version = "0.1.0"
description = "Replication Learning LLM-as-a-Judge for Preference Alignment"
readme = "README.md"
authors = [{ name = "Sindhuja Chaduvula", email = "sindhuja.chaduvula@vectorinstitute.ai" }]
license = "MIT"
requires-python = ">=3.10,<3.12"

dependencies = [
    # --- Your ML project dependencies ---
    "python-dotenv==1.1",
    "torch==2.6.0+cu124",
    "torchaudio==2.6.0+cu124",
    "torchvision==0.21.0+cu124",
    "cmake==4.1.0",
    "ninja>=1.13.0",
    "pyarrow==15.0.2",
    "unsloth[colab-new]",
    "einops>=0.8.1",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
    "build>=1.3.0",
    "trl==0.22.2",
    "peft>=0.17.1",
    "accelerate==1.10.1",
    "bitsandbytes==0.48.1",
    "unsloth-zoo>=2025.10.10",
    "wandb>=0.22.2",
    "flash-attn==2.7.3",
    "sentence-transformers>=5.1.2",
    "openai>=2.6.1",
    "pydantic-settings>=2.11.0",
    "jsonlines>=4.0.0",
    "seaborn>=0.13.2",
    "aiofiles>=25.1.0",
    "tiktoken==0.7.0",
    "opik>=1.9.33",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aixpert"]

# ------------------------------------------------
# Dependency groups (required by CI)
# ------------------------------------------------
[dependency-groups]
dev = [
    "codecov>=2.1.13",
    "mypy>=1.14.1",
    "nbqa>=1.9.1",
    "pip-audit>=2.7.3",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.2",
    "types-pyyaml>=6.0.12.20250822",
]

docs = [
    "jinja2>=3.1.6",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.15",
    "mkdocstrings>=0.24.1",
    "mkdocstrings-python>=1.10.0",
    "ipykernel>=6.29.5",
    "ipython>=8.31.0",
]

# ------------------------------------------------
# UV configuration
# ------------------------------------------------
[tool.uv]
index-url = "https://pypi.org/simple"
extra-index-url = ["https://download.pytorch.org/whl/cu124"]
index-strategy = "unsafe-best-match"
default-groups = ["dev", "docs"]

[tool.uv.sources]
unsloth = { git = "https://github.com/unslothai/unsloth.git" }

# ------------------------------------------------
# Linting / type checking (required for CI)
# ------------------------------------------------

[tool.mypy]
follow_imports = "normal"
ignore_missing_imports = true
install_types = true
pretty = true
non_interactive = true
allow_untyped_defs = false
check_untyped_defs = true
namespace_packages = true
explicit_package_bases = true
warn_unused_configs = true
strict_equality = true
extra_checks = true
mypy_path = "src"

[tool.ruff]
include = ["*.py", "pyproject.toml", "*.ipynb"]
exclude = []
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "A","B","COM","C4","RET","SIM","ICN","Q","RSE",
    "D","E","F","I","W","N","ERA","PL"
]
fixable = ["A","B","COM","C4","RET","SIM","ICN","Q","RSE","D","E","F","I","W","N","ERA","PL"]
ignore = [
    "B905","E501","D203","D213","PLR2004","PLR0913","COM812",
    "ERA001","A001","A002","D301"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402","F401","F403","F811"]
"tests/*" = ["D103","D105","D107"]

[tool.ruff.lint.pep8-naming]
ignore-names = ["X*", "setUp"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

# ------------------------------------------------
# Pytest & Coverage (CI requirements)
# ------------------------------------------------
[tool.pytest.ini_options]
markers = [
    "integration_test: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/aixpert"]
omit = ["tests/*", "*__init__.py"]
